# dagsteru-essentials

./: .gitignore  pyproject.toml
dagster_university/dagster_university/: __init__.py
dagster_university/dagster_university/assets/: metrics.py  trips.py
dagster_university/dagster_university/jobs/: __init__.py
dagster_university/dagster_university/partitions/: __init__.py
dagster_university/dagster_university/resources/: __init__.py
dagster_university/dagster_university/schedules/: __init__.py
dagster_university/tmp52q_cctj/history/: runs.db
dagster_university/tmp52q_cctj/history/runs/: 04cff63b-d10b-4839-9d77-42677f6d0c35.db  0aa22363-449c-4628-be29-7032504b63da.db  6c136cd1-ad11-455d-8eef-755ec6ac3fa6.db  829f858d-6ad0-4c30-b6a0-0874106ff019.db  874ba0ea-1b79-4e00-a745-9ae718b244b6.db  a6ca15a7-e13e-4a68-86c8-704a4a6b890a.db  aac85ed6-72f3-4c42-99b6-37faccc91520.db  b3488ee9-d3a7-421c-aa82-b2864b0d2ee3.db  d8416d05-023b-43ff-ac1c-acfc1803ac8a.db  f0680ea0-ee9e-43ee-b8c0-78c32aa6d0b1.db  index.db
dagster_university/tmp52q_cctj/schedules/: schedules.db
dagster_university/tmpa8jks5hl/history/: runs.db
dagster_university/tmpa8jks5hl/history/runs/: index.db
dagster_university/tmpa8jks5hl/schedules/: schedules.db
dagster_university/tmpvpd_v2vc/history/: runs.db
dagster_university/tmpvpd_v2vc/history/runs/: 2ef441ea-06cc-470f-9bf2-164eb19d65bc.db  6ad1afbc-c12e-4352-b685-873699e8d388.db  9b354331-a5dd-4cc8-820a-cc05d8cae1fd.db  a47f4a8e-d5e3-4e02-8b4f-78e2f4f5cd5c.db  index.db
dagster_university/tmpvpd_v2vc/schedules/: schedules.db
(+27 files in other folders)
