[project]
name = "dagsteru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-webserver>=1.9.0",
    "dagster==1.9",
    "dagster-duckdb>=0.25.0",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "kaleido==0.2.1",
]
